fixed security disabled access for unauthorized users